# Vulkan3DModelViewer

./: .gitignore  CMakeLists.txt
dependencies/assimp/include/assimp/: config.h.in
dependencies/glfw/include/glfw/: glfw3.h
shaders/: material.glsl  model_frag.frag  model_vert.vert
src/: application.cpp  application.hpp  main.cpp  window.cpp  window.hpp
src/camera/: camera.cpp  camera.hpp
src/model/: material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  vertex.hpp
src/vk/: debug.cpp  debug.hpp  vulkan_functions.cpp  vulkan_functions.hpp  vulkan_types.hpp
